--- a/jenax-core-parent/pom.xml
+++ b/jenax-core-parent/pom.xml
@@ -14,6 +14,6 @@
 	</parent>
 
 	<modules>
-		<module>jenax-core-any-resource</module>
+		<module>jenax-core-anyresource</module>
 	</modules>
 </project>
