Work on the constraints module (not yet compiling)

--- a/jenax-arq-parent/pom.xml
+++ b/jenax-arq-parent/pom.xml
@@ -18,5 +18,6 @@
 		<module>jenax-arq-rdfterm</module>
 		<module>jenax-arq-dataset-one-ng</module>
 		<module>jenax-arq-rdfnode-in-dataset</module>
+		<module>jenax-arq-constraints</module>
 	</modules>
 </project>
