--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-arq-rdfterm</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.topbraid</groupId>
 				<artifactId>shacl</artifactId>
 				<version>1.3.2</version>
@@ -622,12 +628,12 @@
 				<version>${aksw.commons.version}</version>
 
 				<!-- Jena pulls in jcl-over-slf4j, so we don't need to add it ourselves -->
-				<exclusions>
-					<exclusion>
-						<groupId>commons-logging</groupId>
-						<artifactId>commons-logging</artifactId>
-					</exclusion>
-				</exclusions>
+				<!-- <exclusions> -->
+				<!-- <exclusion> -->
+				<!-- <groupId>commons-logging</groupId> -->
+				<!-- <artifactId>commons-logging</artifactId> -->
+				<!-- </exclusion> -->
+				<!-- </exclusions> -->
 
 			</dependency>
 
