--- a/jenax-arq-parent/pom.xml
+++ b/jenax-arq-parent/pom.xml
@@ -14,6 +14,7 @@
 	</parent>
 
 	<modules>
+		<module>jenax-arq-functions</module>
 		<module>jenax-arq-utils</module>
 		<module>jenax-arq-rdfterm</module>
 		<module>jenax-arq-dataset-one-ng</module>
