--- a/pom.xml
+++ b/pom.xml
@@ -299,6 +299,13 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-arq-functions</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+
+			<dependency>
 				<groupId>org.topbraid</groupId>
 				<artifactId>shacl</artifactId>
 				<version>1.3.2</version>
