--- a/jenax-arq-parent/jenax-arq-constraints/pom.xml
+++ b/jenax-arq-parent/jenax-arq-constraints/pom.xml
@@ -20,6 +20,12 @@
 			<artifactId>aksw-commons-util</artifactId>
 		</dependency>
 
+		<!-- For PolaritySet -->
+		<dependency>
+			<groupId>org.aksw.commons</groupId>
+			<artifactId>aksw-commons-collections</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-arq-rdfterm</artifactId>
