Added a user data map to tracker; improved toString output of constraints

--- a/jenax-arq-parent/jenax-arq-trackingwalker/pom.xml
+++ b/jenax-arq-parent/jenax-arq-trackingwalker/pom.xml
@@ -15,6 +15,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-constraints</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.aksw.commons</groupId>
 			<artifactId>aksw-commons-paths</artifactId>
 		</dependency>
