--- a/pom.xml
+++ b/pom.xml
@@ -294,6 +294,12 @@
 
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-arq-constraints</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-arq-rdfterm</artifactId>
 				<version>${project.version}</version>
 			</dependency>
