--- a/jenax-functionbinder-parent/jenax-functionbinder-core/pom.xml
+++ b/jenax-functionbinder-parent/jenax-functionbinder-core/pom.xml
@@ -4,49 +4,42 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>jenax-arq-rx</artifactId>
+	<artifactId>jenax-functionbinder-core</artifactId>
 	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
-		<artifactId>jenax-arq-parent</artifactId>
+		<artifactId>jenax-functionbinder-parent</artifactId>
+		<!--< <artifactId>jena-sparql-api-mapper-parent</artifactId> -->
 		<version>4.2.0-1-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-annotations-reprogen</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-rdfconnection</artifactId>
+			<artifactId>jena-arq</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
-			<artifactId>jenax-arq-stmt</artifactId>
+			<artifactId>jenax-reprogen-shared</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.aksw.jenax</groupId>
-			<artifactId>jenax-arq-dataset-one-ng</artifactId>
-		</dependency>
-
+		<!--  Iterable utils -->
 		<dependency>
 			<groupId>org.aksw.commons</groupId>
-			<artifactId>aksw-commons-io-utils</artifactId>
+			<artifactId>aksw-commons-collections</artifactId>
 		</dependency>
 
+		<!--  ConverterRegistry (same interface as spring without forcing to depend on spring) -->
 		<dependency>
 			<groupId>org.aksw.commons</groupId>
-			<artifactId>aksw-commons-rx</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.aksw.commons</groupId>
-			<artifactId>aksw-commons-collectors</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>io.reactivex.rxjava3</groupId>
-			<artifactId>rxjava</artifactId>
+			<artifactId>aksw-commons-utils</artifactId>
 		</dependency>
 
 
@@ -62,6 +55,5 @@
 			<artifactId>jenax-resources-test-config</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 </project>
