--- a/jenax-functionbinder-parent/pom.xml
+++ b/jenax-functionbinder-parent/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>jenax-reprogen-parent</artifactId>
+	<artifactId>jenax-functionbinder-parent</artifactId>
 	<packaging>pom</packaging>
 
 	<parent>
@@ -14,7 +14,6 @@
 	</parent>
 
 	<modules>
-		<module>jenax-reprogen-shared</module>
-		<module>jenax-reprogen-core</module>
+		<module>jenax-functionbinder-core</module>
 	</modules>
 </project>
