--- a/jenax-reprogen-parent/jenax-reprogen-core/pom.xml
+++ b/jenax-reprogen-parent/jenax-reprogen-core/pom.xml
@@ -29,6 +29,11 @@
 
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-reprogen-shared</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-resources-prefixes</artifactId>
 		</dependency>
 
