--- a/jenax-arq-parent/jenax-arq-stmt/pom.xml
+++ b/jenax-arq-parent/jenax-arq-stmt/pom.xml
@@ -21,6 +21,13 @@
 			<artifactId>jenax-resources-prefixes</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.aksw.commons</groupId>
+			<artifactId>aksw-commons-utils</artifactId>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-arq-utils</artifactId>
