--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,12 @@
 
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-arq-connection</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-arq-dataset-one-ng</artifactId>
 				<version>${project.version}</version>
 			</dependency>
