--- a/jenax-arq-parent/jenax-arq-constraints/pom.xml
+++ b/jenax-arq-parent/jenax-arq-constraints/pom.xml
@@ -17,7 +17,7 @@
 
 		<dependency>
 			<groupId>org.aksw.commons</groupId>
-			<artifactId>aksw-commons-util</artifactId>
+			<artifactId>aksw-commons-utils</artifactId>
 		</dependency>
 
 		<!-- For PolaritySet -->
