added the paths and propertypaths module (the former module is a framework for building custom paths in order to address items in hierarchical structures - i'm still looking for a succinct name...)

--- a/jenax-arq-parent/pom.xml
+++ b/jenax-arq-parent/pom.xml
@@ -14,6 +14,7 @@
 	</parent>
 
 	<modules>
+		<module>jenax-arq-paths</module>
 		<module>jenax-arq-connection</module>
 		<module>jenax-arq-stmt</module>
 		<module>jenax-arq-functions</module>
