--- a/jenax-arq-parent/jenax-arq-paths/pom.xml
+++ b/jenax-arq-parent/jenax-arq-paths/pom.xml
@@ -20,10 +20,11 @@
 			<artifactId>aksw-commons-paths</artifactId>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.aksw.jenax</groupId> -->
-<!-- 			<artifactId>jenax-arq-relations</artifactId> -->
-<!-- 		</dependency> -->
+		<!-- For paths of unary expressions -->
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-relations</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
