--- a/jenax-arq-parent/jenax-arq-datasets-parent/jenax-arq-datasets-oneng/pom.xml
+++ b/jenax-arq-parent/jenax-arq-datasets-parent/jenax-arq-datasets-oneng/pom.xml
@@ -4,20 +4,26 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>jenax-anyresource</artifactId>
+	<artifactId>jenax-arq-datasets-oneng</artifactId>
 	<packaging>jar</packaging>
+
 
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
-		<artifactId>jenax-core-parent</artifactId>
+		<artifactId>jenax-arq-datasets-parent</artifactId>
 		<version>4.2.0-1-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-utils</artifactId>
+		</dependency>
 
+		<!-- Jena -->
 		<dependency>
 			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-core</artifactId>
+			<artifactId>jena-arq</artifactId>
 		</dependency>
 
 		<!-- Unit Testing -->
