--- a/jenax-arq-parent/jenax-arq-rx/pom.xml
+++ b/jenax-arq-parent/jenax-arq-rx/pom.xml
@@ -26,7 +26,19 @@
 
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
-			<artifactId>jenax-arq-dataset-one-ng</artifactId>
+			<artifactId>jenax-arq-datasets-orderaware</artifactId>
+		</dependency>
+
+
+		<!-- This dependency includes geosparql; it should go elsewhere -->
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-json</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-datasets-oneng</artifactId>
 		</dependency>
 
 		<dependency>
