--- a/jenax-analytics-parent/jenax-analytics-core/pom.xml
+++ b/jenax-analytics-parent/jenax-analytics-core/pom.xml
@@ -9,7 +9,7 @@
 
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
-		<artifactId>jenax-arq-parent</artifactId>
+		<artifactId>jenax-analytics-parent</artifactId>
 		<version>4.2.0-1-SNAPSHOT</version>
 	</parent>
 
