--- a/jenax-arq-parent/jenax-arq-rx/pom.xml
+++ b/jenax-arq-parent/jenax-arq-rx/pom.xml
@@ -21,6 +21,11 @@
 
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-connection</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-arq-stmt</artifactId>
 		</dependency>
 
