Clean up server module - though not yet working

--- a/jenax-server-parent/jenax-server-standalone/pom.xml
+++ b/jenax-server-parent/jenax-server-standalone/pom.xml
@@ -17,7 +17,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
-			<artifactId>jenax-server-core</artifactId>
+			<artifactId>jenax-server-frontends</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-stmt</artifactId>
 		</dependency>
 
 
