--- a/jenax-server-parent/jenax-server-core/pom.xml
+++ b/jenax-server-parent/jenax-server-core/pom.xml
@@ -1,192 +1,199 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jenax-server-core</artifactId>
-    <packaging>jar</packaging>
+	<artifactId>jenax-server-core</artifactId>
 
-    <parent>
-        <groupId>org.aksw.jenax</groupId>
-        <artifactId>jenax-server-parent</artifactId>
-        <version>4.3.0-1-SNAPSHOT</version>
-    </parent>
-
-
-    <dependencies>
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-arq-connection</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-arq-utils</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-server-frontends</artifactId>
-        </dependency>
-
-        <!-- Jersey / spring -->
-        <!-- <dependency> -->
-        <!-- <groupId>com.sun.jersey.contribs</groupId> -->
-        <!-- <artifactId>jersey-spring</artifactId> -->
-        <!-- </dependency> -->
+	<parent>
+		<groupId>org.aksw.jenax</groupId>
+		<artifactId>jenax-server-parent</artifactId>
+		<version>4.3.0-1-SNAPSHOT</version>
+	</parent>
 
 
-        <dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-servlet</artifactId>
-        </dependency>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
 
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-multipart</artifactId>
-        </dependency>
-
-
-        <!-- <dependency> -->
-        <!-- <groupId>org.springframework</groupId> -->
-        <!-- <artifactId>spring-core</artifactId> -->
-        <!-- </dependency> -->
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-        </dependency>
+			<!-- <plugin> -->
+			<!-- <groupId>org.apache.tomcat.maven</groupId> -->
+			<!-- <artifactId>tomcat6-maven-plugin</artifactId> -->
+			<!-- <version>2.1</version> -->
+			<!-- <configuration> -->
+			<!-- <server>${tomcat6.server-id}</server> -->
+			<!-- <url>${tomcat6.deploy-url}</url> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 
 
-        <!-- <dependency> -->
-        <!-- <groupId>org.atmosphere</groupId> -->
-        <!-- <artifactId>atmosphere-spring</artifactId> -->
-        <!-- </dependency> -->
-
-        <dependency>
-            <groupId>xml-apis</groupId>
-            <artifactId>xml-apis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>eu.infomas</groupId>
-            <artifactId>annotation-detector</artifactId>
-        </dependency>
-        <dependency> <!-- Used for @Configuration annotation so we can inject an ApplicationContext
-                into servlets -->
-            <groupId>cglib</groupId>
-            <artifactId>cglib-nodep</artifactId>
-        </dependency>
-        <!-- <dependency> -->
-        <!-- <groupId>com.sun.jersey</groupId> -->
-        <!-- <artifactId>jersey-json</artifactId> -->
-        <!-- <version>${jersey.version}</version> -->
-        <!-- </dependency> -->
-        <!-- <dependency> -->
-        <!-- <groupId>org.atmosphere</groupId> -->
-        <!-- <artifactId>atmosphere-jquery</artifactId> -->
-        <!-- <version>${atmosphere.version}</version> -->
-        <!-- <type>war</type> -->
-        <!-- </dependency> -->
-
-        <!-- Jetty -->
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-webapp</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-http</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>apache-jsp</artifactId>
-        </dependency>
-
-        <!-- <dependency> <groupId>org.eclipse.jetty</groupId> <artifactId>jetty-jsp</artifactId>
-            </dependency> -->
-
-        <!-- Logging -->
-<!--
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-        </dependency>
--->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-ext</artifactId>
-        </dependency>
-<!--
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-        </dependency>
--->
-
-        <!-- AKSW Commons -->
+			<!-- <plugin> -->
+			<!-- <groupId>org.apache.tomcat.maven</groupId> -->
+			<!-- <artifactId>tomcat7-maven-plugin</artifactId> -->
+			<!-- <version>2.1</version> -->
+			<!-- <configuration> -->
+			<!-- <server>${tomcat7.server-id}</server> -->
+			<!-- <url>${tomcat7.deploy-url}</url> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 
 
-        <!-- Database Connectivity -->
+			<!-- <plugin> -->
+			<!-- <groupId>org.mortbay.jetty</groupId> -->
+			<!-- <artifactId>jetty-maven-plugin</artifactId> -->
+			<!-- <version>8.1.9.v20130131</version> -->
+			<!-- <configuration> -->
+			<!-- <systemProperties> -->
+			<!-- <systemProperty> -->
+			<!-- <name>jetty.port</name> -->
+			<!-- <value>5510</value> -->
+			<!-- </systemProperty> -->
+			<!-- </systemProperties> -->
+			<!-- <reload>manual</reload> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
+
+		</plugins>
+	</build>
 
 
-        <!-- JDBC Connection Pooling -->
+	<dependencies>
+	
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-connection</artifactId>
+		</dependency>
 
-        <!-- Utils; but what for??? -->
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-stmt</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-utils</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>jena-arq</artifactId>
+		</dependency>
+
+		<!-- <dependency> <groupId>org.aksw.jena-sparql-api</groupId> <artifactId>jena-sparql-api-path-finding</artifactId> 
+			</dependency> -->
+		<!-- <dependency> <groupId>org.aksw.jena-sparql-api</groupId> <artifactId>jena-sparql-api-update</artifactId> 
+			</dependency> -->
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
 
 
-        <!-- Command Line Argument Parsing -->
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
 
 
-        <!-- Collection Libraries -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.ext</groupId>
+			<artifactId>jersey-spring5</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
 
 
-        <!-- Spring Framework -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.atmosphere</groupId> -->
+		<!-- <artifactId>atmosphere-jersey</artifactId> -->
+		<!-- </dependency> -->
 
 
 
-        <!-- URL Rewriting -->
-        <!-- <dependency> -->
-        <!-- <groupId>org.tuckey</groupId> -->
-        <!-- <artifactId>urlrewritefilter</artifactId> -->
-        <!-- </dependency> -->
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+		</dependency>
 
-        <!-- Gson: Java to Json conversion -->
-        <!-- <dependency> -->
-        <!-- <groupId>com.google.code.gson</groupId> -->
-        <!-- <artifactId>gson</artifactId> -->
-        <!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.slf4j</groupId> -->
+		<!-- <artifactId>slf4j-api</artifactId> -->
+		<!-- </dependency> -->
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-resources-test-config</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- <dependency> -->
+		<!-- <groupId>org.tuckey</groupId> -->
+		<!-- <artifactId>urlrewritefilter</artifactId> -->
+		<!-- </dependency> -->
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		</dependency>
+
+		<!-- <dependency> -->
+		<!-- <groupId>javax.ws.rs</groupId> -->
+		<!-- <artifactId>jsr311-api</artifactId> -->
+		<!-- </dependency> -->
+
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+		</dependency>
+
+		<!-- <dependency> -->
+		<!-- <groupId>javax.servlet</groupId> -->
+		<!-- <artifactId>javax.servlet-api</artifactId> -->
+		<!-- </dependency> -->
 
 
-    </dependencies>
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring-beans</artifactId> -->
+		<!-- </dependency> -->
+
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring-context</artifactId> -->
+		<!-- </dependency> -->
+	</dependencies>
 
 </project>
-
