--- a/jenax-server-parent/jenax-server-standalone/pom.xml
+++ b/jenax-server-parent/jenax-server-standalone/pom.xml
@@ -25,6 +25,10 @@
 			<artifactId>jenax-arq-stmt</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-connection</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
