--- a/pom.xml
+++ b/pom.xml
@@ -279,24 +279,23 @@
 				<version>${project.version}</version>
 			</dependency>
 
-                        <dependency>
-                                <groupId>org.aksw.jenax</groupId>
-                                <artifactId>jenax-server-core</artifactId>
-                                <version>${project.version}</version>
-                        </dependency>
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-server-core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 
-                        <dependency>
-                                <groupId>org.aksw.jenax</groupId>
-                                <artifactId>jenax-server-frontends</artifactId>
-                                <version>${project.version}</version>
-                        </dependency>
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-server-frontends</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 
-                        <dependency>
-                                <groupId>org.aksw.jenax</groupId>
-                                <artifactId>jenax-server-standalone</artifactId>
-                                <version>${project.version}</version>
-                        </dependency>
-
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-server-standalone</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
@@ -879,14 +878,8 @@
 				<groupId>org.apache.hadoop</groupId>
 				<artifactId>hadoop-common</artifactId>
 				<version>3.3.1</version>
-<!--
-				<exclusions>
-					<exclusion>
-						<groupId>*</groupId>
-						<artifactId>*</artifactId>
-					</exclusion>
-				</exclusions>
--->
+				<!-- <exclusions> <exclusion> <groupId>*</groupId> <artifactId>*</artifactId> 
+					</exclusion> </exclusions> -->
 			</dependency>
 
 
