--- a/jenax-arq-parent/jenax-arq-plugins-parent/pom.xml
+++ b/jenax-arq-parent/jenax-arq-plugins-parent/pom.xml
@@ -15,5 +15,6 @@
 
 	<modules>
 		<module>jenax-arq-plugins-bundle</module>
+		<module>jenax-arq-plugins-service-vfs</module>
 	</modules>
 </project>
