--- a/jenax-arq-parent/jenax-arq-quadengine/pom.xml
+++ b/jenax-arq-parent/jenax-arq-quadengine/pom.xml
@@ -16,7 +16,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
-			<artifactId>jenax-arq-connection</artifactId>
+			<artifactId>jenax-arq-connection-core</artifactId>
 		</dependency>
 
 
