--- a/jenax-models-parent/pom.xml
+++ b/jenax-models-parent/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>jenax-arq-parent</artifactId>
+	<artifactId>jenax-parent</artifactId>
 	<packaging>pom</packaging>
 
 	<parent>
@@ -14,6 +14,6 @@
 	</parent>
 
 	<modules>
-		<module>jenax-models-dcat</module>
+		<module>jenax-models-dcat-api</module>
 	</modules>
 </project>
