--- a/jenax-server-parent/jenax-server-frontends/pom.xml
+++ b/jenax-server-parent/jenax-server-frontends/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-arq-connection</artifactId>
+            <artifactId>jenax-arq-connection-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.aksw.jenax</groupId>
