--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<module>jenax-functionbinder-parent</module>
 		<module>jenax-reprogen-parent</module>
 		<module>jenax-io-parent</module>
+		<module>jenax-models-parent</module>
 		<module>jenax-conjure-parent</module>
 		<module>jenax-server-parent</module>
 	</modules>
@@ -280,11 +281,11 @@
 				<version>1.5.1-1-SNAPSHOT</version>
 			</dependency>
 
-                        <dependency>
-                                <groupId>org.aksw.jenax</groupId>
-                                <artifactId>jenax-arq-plugins-service-vfs</artifactId>
-                                <version>${project.version}</version>
-                        </dependency>
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-arq-plugins-service-vfs</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
@@ -295,6 +296,12 @@
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-conjure-core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-functionbinder-core</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
@@ -317,7 +324,6 @@
 				<version>${project.version}</version>
 			</dependency>
 
-
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-arq-connection-core</artifactId>
@@ -335,7 +341,6 @@
 				<artifactId>jenax-arq-connection-mods</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-
 
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
