--- a/jenax-arq-parent/jenax-arq-connection-parent/jenax-arq-connection-core/pom.xml
+++ b/jenax-arq-parent/jenax-arq-connection-parent/jenax-arq-connection-core/pom.xml
@@ -9,7 +9,7 @@
 
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
-		<artifactId>jenax-arq-parent</artifactId>
+		<artifactId>jenax-arq-connection-parent</artifactId>
 		<version>4.3.0-1-SNAPSHOT</version>
 	</parent>
 
@@ -17,6 +17,11 @@
 		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-arq</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.commons</groupId>
+			<artifactId>aksw-commons-utils</artifactId>
 		</dependency>
 
 		<dependency>
