--- a/jenax-models-parent/pom.xml
+++ b/jenax-models-parent/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>jenax-parent</artifactId>
+	<artifactId>jenax-models-parent</artifactId>
 	<packaging>pom</packaging>
 
 	<parent>
@@ -17,3 +17,4 @@
 		<module>jenax-models-dcat-api</module>
 	</modules>
 </project>
+
