--- a/jenax-rx-parent/pom.xml
+++ b/jenax-rx-parent/pom.xml
@@ -10,10 +10,10 @@
 	<parent>
 		<groupId>org.aksw.jenax</groupId>
 		<artifactId>jenax-parent</artifactId>
-		<version>4.2.0-1-SNAPSHOT</version>
+		<version>4.3.0-1-SNAPSHOT</version>
 	</parent>
 
 	<modules>
-		<module>jenax-rx-rdfconnection</module>
+		<module>jenax-rx-ops-syscall</module>
 	</modules>
 </project>
