--- a/jenax-reprogen-parent/jenax-reprogen-jpa/pom.xml
+++ b/jenax-reprogen-parent/jenax-reprogen-jpa/pom.xml
@@ -1,85 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jenax-reprogen-jpa</artifactId>
-    <packaging>jar</packaging>
+	<artifactId>jenax-reprogen-jpa</artifactId>
+	<packaging>jar</packaging>
 
-    <parent>
-        <groupId>org.aksw.jenax</groupId>
-        <artifactId>jenax-reprogen-parent</artifactId>
-        <version>4.3.0-1-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<groupId>org.aksw.jenax</groupId>
+		<artifactId>jenax-reprogen-parent</artifactId>
+		<version>4.3.0-1-SNAPSHOT</version>
+	</parent>
 
-    <dependencies>
+	<dependencies>
 
-        <!-- Self Dependencies -->
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-arq-connection-core</artifactId>
-        </dependency>
+		<!-- Self Dependencies -->
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-connection-core</artifactId>
+		</dependency>
 
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-arq-datashapes</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-datashapes</artifactId>
+		</dependency>
 
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-rx-dataaccess</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-rx-dataaccess</artifactId>
+		</dependency>
 
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-annotations-reprogen</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-annotations-reprogen</artifactId>
+		</dependency>
 
-<!--         <dependency> -->
-<!--             <groupId>org.aksw.jenax</groupId> -->
-<!--             <artifactId>jenax-arq-rx</artifactId> -->
-<!--         </dependency> -->
+		<!-- Used for RDFDatatypeCalendar -->
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-plugins-bundle</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-<!--         <dependency> -->
-<!--             <groupId>org.aksw.jenax</groupId> -->
-<!--             <artifactId>jenax-arq-analytics-core</artifactId> -->
-<!--         </dependency> -->
 
-<!--
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-update</artifactId>
-        </dependency>
--->
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-arq-relations</artifactId>
-        </dependency>
-<!--
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-resource-shape</artifactId>
-        </dependency>
--->
+		<!-- <dependency> -->
+		<!-- <groupId>org.aksw.jenax</groupId> -->
+		<!-- <artifactId>jenax-arq-rx</artifactId> -->
+		<!-- </dependency> -->
 
-        <dependency>
-            <groupId>org.aksw.spring</groupId>
-            <artifactId>spring-json-core</artifactId>
-        </dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.aksw.jenax</groupId> -->
+		<!-- <artifactId>jenax-arq-analytics-core</artifactId> -->
+		<!-- </dependency> -->
 
-        <dependency>
-            <groupId>org.aksw.commons</groupId>
-            <artifactId>aksw-commons-beans</artifactId>
-        </dependency>
+		<!-- <dependency> <groupId>org.aksw.jenax</groupId> <artifactId>jenax-update</artifactId> 
+			</dependency> -->
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-relations</artifactId>
+		</dependency>
+		<!-- <dependency> <groupId>org.aksw.jenax</groupId> <artifactId>jenax-resource-shape</artifactId> 
+			</dependency> -->
 
-        <dependency>
-            <groupId>org.aksw.commons</groupId>
-            <artifactId>subgraph-isomorphism-index-jena</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.aksw.spring</groupId>
+			<artifactId>spring-json-core</artifactId>
+		</dependency>
 
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>javax.persistence</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.aksw.commons</groupId>
+			<artifactId>aksw-commons-beans</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.commons</groupId>
+			<artifactId>subgraph-isomorphism-index-jena</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>javax.persistence</artifactId>
+		</dependency>
 
 		<!-- Unit Testing -->
 
@@ -89,12 +91,12 @@
 			<scope>test</scope>
 		</dependency>
 
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-resources-test-config</artifactId>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-resources-test-config</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 
-    </dependencies>
+	</dependencies>
 </project>
