--- a/jenax-arq-parent/pom.xml
+++ b/jenax-arq-parent/pom.xml
@@ -35,6 +35,7 @@
 		<module>jenax-arq-hdt</module>
 		<module>jenax-arq-datashapes</module>
 		<module>jenax-arq-pathfinding</module>
+		<module>jenax-arq-entityquery</module>
 
 		<!-- udf relies on reprogen; and reprogen relies on arq utils; structure is not ideal -->
 		<!-- maybe its better to have udf build on the top level functionbinder module -->
