Added the new shacl code to the datashapes module (the observable collections part is not yet ready for move to the collections module)

--- a/jenax-arq-parent/jenax-arq-collections/pom.xml
+++ b/jenax-arq-parent/jenax-arq-collections/pom.xml
@@ -21,6 +21,11 @@
 
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-utils</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
 			<artifactId>jenax-resources-prefixes</artifactId>
 		</dependency>
 
