--- a/jenax-facete-parent/jenax-facete-impl/pom.xml
+++ b/jenax-facete-parent/jenax-facete-impl/pom.xml
@@ -53,6 +53,90 @@
 
 	</dependencies>
 
+
+<build>
+<plugins>
+     <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-compiler-plugin</artifactId>
+                                        <version>3.8.0</version>
+                                        <configuration>
+                                                <!-- <source>${maven.compiler.source}</source> <target>${maven.compiler.target}</target> -->
+                                                <release>${maven.compiler.release}</release>
+                                                <compilerArgument>-proc:none</compilerArgument>
+                                                <!-- https://discourse.hibernate.org/t/metamodel-usage-with-maven-and-intellij/487 -->
+                                                <annotationProcessorPaths>
+                                                        <path>
+                                                                <groupId>org.hibernate</groupId>
+                                                                <artifactId>hibernate-jpamodelgen</artifactId>
+                                                                <version>5.4.30.Final</version>
+                                                        </path>
+                                                        <path>
+                                                                <groupId>javax.xml.bind</groupId>
+                                                                <artifactId>jaxb-api</artifactId>
+                                                                <version>${javax.xml.version}</version>
+                                                        </path>
+                                                        <path>
+                                                                <groupId>javax.annotation</groupId>
+                                                                <artifactId>javax.annotation-api</artifactId>
+                                                                <version>1.3.1</version>
+                                                        </path>
+                                                        <!-- <path> <groupId>com.sun.xml.bind</groupId> <artifactId>jaxb-impl</artifactId> 
+                                                                <version>2.3.1</version> </path> -->
+
+
+                                                        <!-- <path> -->
+                                                        <!-- <groupId>org.openjdk.jmh</groupId> -->
+                                                        <!-- <artifactId>jmh-generator-annprocess</artifactId> -->
+                                                        <!-- <version>${jmh.version}</version> -->
+                                                        <!-- </path> -->
+                                                </annotationProcessorPaths>
+                                        </configuration>
+                                </plugin>
+                                <plugin>
+                                        <groupId>org.bsc.maven</groupId>
+                                        <artifactId>maven-processor-plugin</artifactId>
+                                        <version>2.0.5</version>
+                                        <executions>
+                                                <execution>
+                                                        <id>process</id>
+                                                        <goals>
+                                                                <goal>process</goal>
+                                                        </goals>
+                                                        <phase>generate-sources</phase>
+                                                        <configuration>
+                                                                <processors>
+                                                                        <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
+                                                                </processors>
+                                                        </configuration>
+                                                </execution>
+                                        </executions>
+                                        <dependencies>
+                                                <dependency>
+                                                        <groupId>org.hibernate</groupId>
+                                                        <artifactId>hibernate-jpamodelgen</artifactId>
+                                                        <version>5.3.6.Final</version>
+                                                </dependency>
+
+                                                <dependency>
+                                                        <groupId>javax.xml.bind</groupId>
+                                                        <artifactId>jaxb-api</artifactId>
+                                                        <version>${javax.xml.version}</version>
+                                                </dependency>
+                                                <dependency>
+
+                                                        <groupId>javax.annotation</groupId>
+                                                        <artifactId>javax.annotation-api</artifactId>
+                                                        <version>1.3.1</version>
+                                                </dependency>
+
+
+                                        </dependencies>
+                                </plugin>
+
+
+</plugins>
+</build>
 	<!-- <build> -->
 	<!-- <plugins> -->
 	<!-- <plugin> -->
