--- a/jenax-rx-parent/jenax-rx-dataaccess/pom.xml
+++ b/jenax-rx-parent/jenax-rx-dataaccess/pom.xml
@@ -43,6 +43,11 @@
 			<artifactId>jenax-arq-collections</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-arq-entityquery</artifactId>
+		</dependency>
+
 		<!-- Needed for QueryExecutionCompare -->
 		<dependency>
 			<groupId>org.aksw.jenax</groupId>
