--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,8 @@
 		<spring.batch.version>4.3.1</spring.batch.version>
 		<aksw.commons.version>0.9.1-SNAPSHOT</aksw.commons.version>
 
+		<javax.xml.version>2.3.1</javax.xml.version>
+
 		<!-- <atmosphere.version>2.0.0.RC3</atmosphere.version> -->
 		<!-- <atmosphere-spring.version>1.1.0.RC5</atmosphere-spring.version> -->
 		<!-- <jetty-plugin.version>8.1.10.v20130312</jetty-plugin.version> -->
@@ -269,6 +271,47 @@
 						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
+                                <plugin>
+                                        <groupId>org.bsc.maven</groupId>
+                                        <artifactId>maven-processor-plugin</artifactId>
+                                        <version>2.0.5</version>
+                                        <executions>
+                                                <execution>
+                                                        <id>process</id>
+                                                        <goals>
+                                                                <goal>process</goal>
+                                                        </goals>
+                                                        <phase>generate-sources</phase>
+                                                        <configuration>
+                                                                <processors>
+                                                                        <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
+                                                                </processors>
+                                                        </configuration>
+                                                </execution>
+                                        </executions>
+                                        <dependencies>
+                                                <dependency>
+                                                        <groupId>org.hibernate</groupId>
+                                                        <artifactId>hibernate-jpamodelgen</artifactId>
+                                                        <version>5.3.6.Final</version>
+                                                </dependency>
+
+                                                <dependency>
+                                                        <groupId>javax.xml.bind</groupId>
+                                                        <artifactId>jaxb-api</artifactId>
+                                                        <version>${javax.xml.version}</version>
+                                                </dependency>
+                                                <dependency>
+
+                                                        <groupId>javax.annotation</groupId>
+                                                        <artifactId>javax.annotation-api</artifactId>
+                                                        <version>1.3.1</version>
+                                                </dependency>
+
+
+                                        </dependencies>
+                                </plugin>
+
 			</plugins>
 		</pluginManagement>
 	</build>
@@ -521,6 +564,12 @@
 
 			<dependency>
 				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-arq-entityquery</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.aksw.jenax</groupId>
 				<artifactId>jenax-arq-constraints</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -588,13 +637,13 @@
 			<dependency>
 				<groupId>javax.xml.bind</groupId>
 				<artifactId>jaxb-api</artifactId>
-				<version>2.3.1</version>
+				<version>${javax.xml.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.sun.xml.bind</groupId>
 				<artifactId>jaxb-impl</artifactId>
-				<version>2.3.1</version>
+				<version>${javax.xml.version}</version>
 			</dependency>
 
 			<!-- <dependency> <groupId>org.glassfish.jaxb</groupId> <artifactId>jaxb-runtime</artifactId> 
